:lipstick: fix spacing and other minor design issues

--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -38,6 +38,8 @@
     font-size: 1rem;
     font-family: 'Kumbh Sans', sans-serif;
     caret-color: $violet;
+    outline: none;
+    text-overflow: ellipsis;
     &::placeholder {
         color: $very-dark-blue;
         opacity: 0.5;
@@ -87,9 +89,13 @@
     border-radius: 5px;
     cursor: pointer;
     background-color: $violet;
-    padding: 0.75rem 2.5rem;
+    padding: 0.75rem 1.75rem;
     color: $white;
     font-weight: bold;
+    &:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+    }
     &.secondary {
         background-color: rgb(89, 100, 224, 0.1);
         color: $violet;
